fix:text align center for head of verse

--- a/html/css/edition.css
+++ b/html/css/edition.css
@@ -611,7 +611,6 @@ span.lemma::before {
 *.antiqua {
     font-family: var(--bs-font-sans-serif, sans-serif) !important;
     font-size: 0.8em;
-    text-align: center !important;
 }
 
 *.majuscule {
@@ -741,7 +740,7 @@ span.lemma::before {
         padding-left: 0.5rem ;
     }
     .edition-text-inner {
-        padding: padding: 10% ;
+        padding: 10% ;
     }
 }
 
@@ -757,7 +756,7 @@ span.lemma::before {
         padding-left: 0.5rem ;
     }
     .edition-text-inner {
-        padding: padding: 5% ;
+        padding: 5% ;
     }
 }
 
